part2/Exercise_2.04/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserverservice
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: webserverport
  ports:
    - port: 567
      protocol: TCP
      targetPort: 3013
